// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers counter should handle DECREMENT_COUNTER 1`] = `
Object {
  "count": NaN,
}
`;

exports[`reducers counter should handle INCREMENT_COUNTER 1`] = `
Object {
  "count": NaN,
}
`;

exports[`reducers counter should handle initial state 1`] = `
Object {
  "count": 0,
}
`;

exports[`reducers counter should handle unknown action type 1`] = `1`;
